testsuite/gsksl/errors/redeclaration-of-global-variable.glsl
int x;
int x;

void
main ()
{
}
